# 3semOOP

./: README.md
1/src/: CMakeLists.txt  README.md  computator.cpp  computator.h  task.cpp  test.cpp
2/: CMakeLists.txt  README.md  binary.cpp  binary.h  main.cpp  test.cpp
3/: README.md  figure.hpp  main.cpp  point.cpp  rectangle.cpp  rectangle.hpp  romb.cpp  romb.hpp  tests.cpp  trapezia.cpp  trapezia.hpp  vector.cpp  vector.hpp
4/: CMakeLists.txt  README.md  figure.hpp  main.cpp  point.hpp  rectangle.hpp  romb.hpp  tests.cpp  trapezia.hpp  vector.hpp
5/: CMakeLists.txt  MyAlloc.hpp  README.md  main.cpp  stack.hpp  tests.cpp
6/: CMakeLists.txt  README.md  bear.cpp  bear.hpp  knight.cpp  knight.hpp  main.cpp  npc.cpp  npc.hpp  orc.cpp  orc.hpp  tests.cpp
7/: CMakeLists.txt  README.md  bear.cpp  bear.hpp  knight.cpp  knight.hpp  main.cpp  npc.cpp  npc.hpp  orc.cpp  orc.hpp  tests.cpp
